--- a/project.properties
+++ b/project.properties
@@ -12,8 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=..\\..\\..\\Downloads\\facebook-android-sdk-3.6.0\\facebook
-android.library.reference.2=..\\..\\..\\..\\..\\Applications\\android_dev\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
-android.library.reference.3=..\\..\\..\\Downloads\\android-sliding-layer-lib-master\\Library
-android.library.reference.4=..\\..\\..\\Desktop\\adt-bundle-windows-x86-20131030\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
-android.library.reference.5=../../../Desktop/facebook-android-sdk-3.6.0/facebook
+android.library.reference.1=../../../Downloads/facebook-android-sdk-3.6.0/facebook
+android.library.reference.2=../../../../../Applications/android_dev/sdk/extras/google/google_play_services/libproject/google-play-services_lib
