--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -11,7 +11,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 	<uses-permission android:name="android.permission.INTERNET"/>
-<uses-permission android:name="android.permission.WRITE_CONTACTS" />
+	<uses-permission android:name="android.permission.WRITE_CONTACTS" />
+	<uses-permission android:name="android.permission.READ_CALL_LOG" />
 	
     
     <permission
@@ -65,11 +66,8 @@
         <meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
         <activity android:name="com.facebook.LoginActivity"></activity>
         
-        <activity android:label="@string/app_name" android:name="FacebookActivity"/>
+        <activity android:label="@string/app_name" android:name="CallDataActivity"/>
        	<activity android:label="@string/app_name" android:name="GoogleActivity"/>
-        <activity android:label="@string/app_name" android:name="DialerActivity"/>
-       	<activity android:label="@string/app_name" android:name="LinkedInLoginActivity"/>
-        <activity android:label="@string/app_name" android:name="LinkedInOAuthActivity"/>
     </application>
 
 </manifest>
