--- a/project.properties
+++ b/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../../../../Applications/android_dev/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.2=../../../Downloads/SlidingMenu-master 5/library
-android.library.reference.3=../../../Downloads/facebook-android-sdk-3.6.0/facebook
+android.library.reference.1=..\\..\\..\\Desktop\\adt-bundle-windows-x86-20131030\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
+android.library.reference.2=..\\..\\..\\Downloads\\SlidingMenu-master\\library
+android.library.reference.3=../../../Downloads/android-simple-facebook-master/Simple Facebook
