--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
 
     <permission
         android:name="your.package.name.permission.MAPS_RECEIVE"
@@ -78,15 +80,15 @@
             android:label="@string/app_name" />
         <activity
             android:name="com.raunaqsawhney.contakts.FBActivity"
-            android:label="@string/title_activity_fb" >
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.LinkedInActivity"
-            android:label="@string/title_activity_linked_in" >
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.LogActivity"
-            android:label="@string/title_activity_log" >
+            android:label="@string/app_name" >
         </activity>
     </application>
 
