--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,6 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    
 
     <permission
         android:name="your.package.name.permission.MAPS_RECEIVE"
@@ -89,6 +88,16 @@
         <activity
             android:name="com.raunaqsawhney.contakts.LogActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.raunaqsawhney.contakts.FriendDetailActivity"
+            android:label="@string/title_activity_friend_detail" >
+        </activity>
+        <activity
+            android:name="com.raunaqsawhney.contakts.LoginActivity"
+            android:label="@string/app_name" >
+            
+            <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
         </activity>
     </application>
 
