--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -12,7 +12,6 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
-    <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <permission
@@ -82,10 +81,6 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.raunaqsawhney.contakts.LinkedInActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
             android:name="com.raunaqsawhney.contakts.LogActivity"
             android:label="@string/app_name" >
         </activity>
@@ -96,8 +91,13 @@
         <activity
             android:name="com.raunaqsawhney.contakts.LoginActivity"
             android:label="@string/app_name" >
-            
-            <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+            <meta-data
+                android:name="com.facebook.sdk.ApplicationId"
+                android:value="@string/app_id" />
+        </activity>
+        <activity
+            android:name="com.raunaqsawhney.contakts.LIActivity"
+            android:label="@string/title_activity_li" >
         </activity>
     </application>
 
