--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
@@ -45,7 +46,7 @@
             </intent-filter>
 
             <meta-data
-                android:name="android.app.searchable"
+                android:name="com.raunaqsawhney.contakts.searchable"
                 android:resource="@xml/searchable" />
         </activity>
         <activity
@@ -75,10 +76,15 @@
             android:label="@string/app_name" />
         <activity
             android:name="com.raunaqsawhney.contakts.GoogleActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name" >
+            <meta-data
+                android:name="com.raunaqsawhney.contakts.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.FBActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.LogActivity"
@@ -98,6 +104,10 @@
         <activity
             android:name="com.raunaqsawhney.contakts.LIActivity"
             android:label="@string/title_activity_li" >
+        </activity>
+        <activity
+            android:name="com.raunaqsawhney.contakts.WelcomeActivity"
+            android:label="Welcome" >
         </activity>
     </application>
 
