--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -86,7 +86,13 @@
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.FriendDetailActivity"
-            android:label="@string/title_activity_friend_detail" >
+            android:label="" 
+            android:parentActivityName="com.raunaqsawhney.contakts.FBActivity" >
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.raunaqsawhney.contakts.FBActivity" />
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.LoginActivity"
@@ -96,17 +102,18 @@
                 android:value="@string/app_id" />
         </activity>
         <activity
-            android:name="com.raunaqsawhney.contakts.LIActivity"
-            android:label="@string/title_activity_li" >
-        </activity>
-        <activity
             android:name="com.raunaqsawhney.contakts.WelcomeActivity"
             android:label="@string/app_name" >
-            
-			<intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.raunaqsawhney.contakts.LinkedInActivity"
+            android:label="@string/title_activity_linked_in" 
+            android:launchMode="singleInstance">
         </activity>
     </application>
 
