--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -86,7 +86,7 @@
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.FriendDetailActivity"
-            android:label="" 
+            android:label=""
             android:parentActivityName="com.raunaqsawhney.contakts.FBActivity" >
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
@@ -112,11 +112,16 @@
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.LinkedInActivity"
-            android:label="@string/title_activity_linked_in" 
-            android:launchMode="singleInstance">
+            android:label="@string/title_activity_linked_in"
+            android:launchMode="singleInstance" >
         </activity>
-        <activity android:name="com.google.android.gms.ads.AdActivity"
-		android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+        <activity
+            android:name="com.raunaqsawhney.contakts.FrequentActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
