--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <permission
-        android:name="your.package.name.permission.MAPS_RECEIVE"
+        android:name="com.raunaqsawhney.contakts.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="com.raunaqsawhney.contakts.permission.MAPS_RECEIVE" />
