--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,8 +24,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -56,7 +54,7 @@
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCOWtGy107GDqE8ZZ-yYmgCVmCvzXqOo2w" />
+            android:value="AIzaSyA7RNfy7Y3qBAS7aTfOiGNqOzaLlkCPKD4" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -122,7 +120,7 @@
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.InfoActivity"
-            android:label="@string/title_activity_info" >
+            android:label="@string/app_name" >
         </activity>
     </application>
 
