--- a/project.properties
+++ b/project.properties
@@ -13,7 +13,7 @@
 # Project target.
 target=android-19
 android.library.reference.1=../../../Downloads/colorpicker-master/colorpicker-library
-android.library.reference.2=../../../Downloads/facebook-android-sdk-3.6.0/facebook
-android.library.reference.3=../../../AndroidStudioProjects/holographlibrary/HoloGraphLibrary
-android.library.reference.4=../../../../../Applications/android_dev/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.5=../../../Downloads/SlidingMenu-master 6/library
+android.library.reference.2=../../../AndroidStudioProjects/holographlibrary/HoloGraphLibrary
+android.library.reference.3=../../../../../Applications/android_dev/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.4=../../../Downloads/SlidingMenu-master 6/library
+android.library.reference.5=../../../Downloads/facebook-android-sdk-3.6.0 3/facebook
