--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,7 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
+    <uses-feature android:name="android.hardware.screen.portrait" />
 
     <application
         android:allowBackup="true"
@@ -36,7 +37,8 @@
         android:theme="@style/Theme.TransparencyDemo" >
         <activity
             android:name="com.raunaqsawhney.contakts.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="com.raunaqsawhney.contakts.searchable"
                 android:resource="@xml/searchable" />
@@ -44,7 +46,8 @@
         <activity
             android:name="com.raunaqsawhney.contakts.ContactDetailActivity"
             android:label="@string/title_activity_contact_detail"
-            android:parentActivityName="com.raunaqsawhney.contakts.MainActivity" >
+            android:parentActivityName="com.raunaqsawhney.contakts.MainActivity"
+            android:screenOrientation="portrait" >
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
@@ -62,13 +65,16 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
 
-        <activity android:name="com.facebook.LoginActivity" />
+        <activity android:name="com.facebook.LoginActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.raunaqsawhney.contakts.FavActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"/>
         <activity
             android:name="com.raunaqsawhney.contakts.GoogleActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="com.raunaqsawhney.contakts.searchable"
                 android:resource="@xml/searchable" />
@@ -76,12 +82,14 @@
         <activity
             android:name="com.raunaqsawhney.contakts.FBActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.FriendDetailActivity"
             android:label=""
-            android:parentActivityName="com.raunaqsawhney.contakts.FBActivity" >
+            android:parentActivityName="com.raunaqsawhney.contakts.FBActivity"
+            android:screenOrientation="portrait" >
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
@@ -91,7 +99,8 @@
         <activity
             android:name="com.raunaqsawhney.contakts.LoginActivity"
             android:label="@string/app_name"
-            android:parentActivityName="com.raunaqsawhney.contakts.MainActivity" >
+            android:parentActivityName="com.raunaqsawhney.contakts.MainActivity" 
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="com.facebook.sdk.ApplicationId"
                 android:value="@string/app_id" />
@@ -103,7 +112,8 @@
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.WelcomeActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -112,19 +122,23 @@
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.FrequentActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.GraphActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.InfoActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.DialerActivity"
-            android:label="@string/title_activity_dialer" >
+            android:label="@string/title_activity_dialer"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
