--- a/project.properties
+++ b/project.properties
@@ -12,8 +12,8 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../../Downloads/colorpicker-master/colorpicker-library
-android.library.reference.2=../../../AndroidStudioProjects/holographlibrary/HoloGraphLibrary
-android.library.reference.3=../../../../../Applications/android_dev/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.4=../../../Downloads/SlidingMenu-master 6/library
-android.library.reference.5=../../../Downloads/facebook-android-sdk-3.6.0 3/facebook
+android.library.reference.1=..\\..\\..\\Downloads\\colorpicker-master\\colorpicker-library
+android.library.reference.2=../../../Downloads/facebook-android-sdk-3.6.0/facebook
+android.library.reference.3=../holographlibrary/HoloGraphLibrary
+android.library.reference.4=../../../Downloads/SlidingMenu-master/library
+android.library.reference.5=../../../Desktop/adt-bundle-windows-x86-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
