BETA 1.40: IAB done, UI stuff, general cleanup

--- a/project.properties
+++ b/project.properties
@@ -17,3 +17,4 @@ android.library.reference.2=../../../Downloads/facebook-android-sdk-3.6.0 3/face
 android.library.reference.3=../../../AndroidStudioProjects/holographlibrary/HoloGraphLibrary
 android.library.reference.4=../../../Downloads/SlidingMenu-master 6/library
 android.library.reference.5=../../../../../Applications/android_dev/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library=false
