--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.raunaqsawhney.contakts"
-    android:versionCode="14"
-    android:versionName="1.31" >
+    android:versionCode="16"
+    android:versionName="1.40" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -36,6 +36,17 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.TransparencyDemo" >
+        
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyA7RNfy7Y3qBAS7aTfOiGNqOzaLlkCPKD4" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+        
         <activity
             android:name="com.raunaqsawhney.contakts.MainActivity"
             android:label="@string/app_name"
@@ -44,6 +55,7 @@
                 android:name="com.raunaqsawhney.contakts.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        
         <activity
             android:name="com.raunaqsawhney.contakts.ContactDetailActivity"
             android:label="@string/title_activity_contact_detail"
@@ -56,23 +68,15 @@
                 android:value="com.raunaqsawhney.contakts.MainActivity" />
         </activity>
 
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyA7RNfy7Y3qBAS7aTfOiGNqOzaLlkCPKD4" />
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/app_id" />
-
         <activity
             android:name="com.facebook.LoginActivity"
             android:screenOrientation="portrait" />
+        
         <activity
             android:name="com.raunaqsawhney.contakts.FavActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
+        
         <activity
             android:name="com.raunaqsawhney.contakts.GoogleActivity"
             android:label="@string/app_name"
@@ -81,6 +85,7 @@
                 android:name="com.raunaqsawhney.contakts.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        
         <activity
             android:name="com.raunaqsawhney.contakts.FBActivity"
             android:label="@string/app_name"
@@ -90,6 +95,7 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        
         <activity
             android:name="com.raunaqsawhney.contakts.FriendDetailActivity"
             android:label=""
@@ -101,6 +107,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.raunaqsawhney.contakts.FBActivity" />
         </activity>
+        
         <activity
             android:name="com.raunaqsawhney.contakts.LoginActivity"
             android:label="@string/app_name"
@@ -115,6 +122,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.raunaqsawhney.contakts.MainActivity" />
         </activity>
+        
         <activity
             android:name="com.raunaqsawhney.contakts.WelcomeActivity"
             android:label="@string/app_name"
@@ -125,40 +133,39 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity
             android:name="com.raunaqsawhney.contakts.FrequentActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
+        
         <activity
             android:name="com.raunaqsawhney.contakts.GraphActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
+        
         <activity
             android:name="com.raunaqsawhney.contakts.InfoActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
+        
         <activity
             android:name="com.raunaqsawhney.contakts.DialerActivity"
             android:label="@string/title_activity_dialer"
             android:screenOrientation="portrait" >
         </activity>
-        <activity
-            android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+        
+        <activity android:name="com.google.android.gms.ads.AdActivity"
+             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+        
         <activity
             android:name="com.raunaqsawhney.contakts.FBSearchActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
         </activity>
-        <activity
-            android:name="com.raunaqsawhney.contakts.SettingsActivity"
-            android:label="@string/title_activity_settings" >
-        </activity>
+        
     </application>
 
 </manifest>
